2012-10-10  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [WK2][WTR] WebKitTestRunner UI process should be aware of Custom Policy Delegate
        https://bugs.webkit.org/show_bug.cgi?id=95974

        Reviewed by Kenneth Rohde Christiansen.

        Added TestController::decidePolicyForNavigationAction() function as a 'decidePolicyForNavigationAction' WKPagePolicyClient callback
        for WTR UI process. WTR bundle client notifies UI process about Custom Policy Delegate via newly added message,
        so that TestController is aware of whether Custom Policy Delegate as enabled and
        permissive. This data is used then in TestController::decidePolicyForNavigationAction for making policy decision.

        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::setCustomPolicyDelegate):
        (WTR):
        * WebKitTestRunner/InjectedBundle/InjectedBundle.h:
        (InjectedBundle):
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        (WTR::TestRunner::setCustomPolicyDelegate):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::TestController):
        (WTR::TestController::initialize):
        (WTR::TestController::resetStateToConsistentValues):
        (WTR::TestController::setCustomPolicyDelegate):
        (WTR):
        (WTR::TestController::decidePolicyForNavigationAction):
        * WebKitTestRunner/TestController.h:
        (TestController):
        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::didReceiveMessageFromInjectedBundle):

2012-10-10  Zoltan Horvath  <zoltan@webkit.org>

        Pageload tests should measure memory usage
        https://bugs.webkit.org/show_bug.cgi?id=93958

        Reviewed by Ryosuke Niwa.

        Add JS Heap and Heap memory measurement to PageLoad tests.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (dump): Print memory results with DRT.
        * Scripts/old-run-webkit-tests: